# algo_ctrl_DDR_file_gen

./: CMakeLists.txt  DPP_Interface_Definition.dev  DPP_Interface_Definition.layout  DPP_monitor.c  DPP_monitor.h  DppAlgoCmdHeader.h  Makefile.win  README.md  changes.txt  main.c
20221117_DPP_Interf_Def/: CMakeLists.txt  aligned_malloc.c  aligned_malloc.h  main.c
ref/: DppAlgoCmdHeader.h  main_old.c
